--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,6 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import yaml\n",
-    "\n",
     "from datetime import datetime, timedelta\n",
     "from cftime import num2date, date2num\n",
     "\n",
@@ -29,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +55,7 @@
        "dict_keys(['longitude', 'latitude', 'time', 'u100', 'v100'])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,15 +87,18 @@
     "data_df = conversion_module.dict_to_dataframe(info_dict, meta_dict)\n",
     "data_df = conversion_module.measure_wind_info(data_df)\n",
     "\n",
+    "fname = str(meta_dict['latitude'][0])+\"(lat) \"+str(meta_dict['longitude'][0])+\"(lon) located data\"+'.csv'\n",
+    "conversion_module.save_df(data_df, cfg['project_title'], fname)\n",
+    "\n",
     "del info_dict\n",
     "del meta_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -125,8 +127,8 @@
        "      <th>time</th>\n",
        "      <th>u100</th>\n",
        "      <th>v100</th>\n",
-       "      <th>u100_v100_wind_direction</th>\n",
-       "      <th>u100_v100_wind_speed</th>\n",
+       "      <th>100m_wind_direction</th>\n",
+       "      <th>100m_wind_speed</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -259,7 +261,7 @@
        "26302    34.24    127.09  2020-12-31 22:00:00    1.78378608697443   \n",
        "26303    34.24    127.09  2020-12-31 23:00:00  2.2923833869660615   \n",
        "\n",
-       "                      v100   u100_v100_wind_direction  \\\n",
+       "                      v100        100m_wind_direction  \\\n",
        "0       -3.387745165685549  340.50696351005513 degree   \n",
        "1      -3.3271057486084805  334.69424608267923 degree   \n",
        "2       -4.063085522995914   343.5465295913808 degree   \n",
@@ -272,7 +274,7 @@
        "26302  -3.0945162036553415     330.03936529673 degree   \n",
        "26303    -2.70243668502005  319.69321293387475 degree   \n",
        "\n",
-       "                    u100_v100_wind_speed  \n",
+       "                         100m_wind_speed  \n",
        "0      3.5937304123324503 meter / second  \n",
        "1      3.6802653848306854 meter / second  \n",
        "2        4.23657290382681 meter / second  \n",
@@ -288,46 +290,19 @@
        "[26304 rows x 7 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "returned_value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_name = str(meta_data[0][0])+\"(lat) \"+str(meta_data[1][0])+\"(lon)1 located data\"+'.csv'\n",
-    "file_name = str(meta_data[0][0])+\"(lat) \"+str(meta_data[1][0])+\"(lon)1 located data\"+'.csv'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "output_dataset['u10'].get_dims()\n",
-    "timedim = output_dataset['time'].get_dims()[0].size\n",
-    "\n",
-    "time_var = output_dataset.variables[time_dim.name]\n",
-    "times = num2date(time_var[:], time_var.units)\n",
-    "\n",
-    "output_dataset['time'].units"
+    "data_df"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -341,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
