--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,22 +46,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['longitude', 'latitude', 'time', 'u100', 'v100'])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ncfile_name = '20210731_test_example_2.nc'\n",
+    "# ncfile_name = '20210731_test_example_2.nc'\n",
+    "ncfile_name = '2023_former.nc'\n",
     "output_dataset = datasetDict[ncfile_name]\n",
     "\n",
     "# 하단 데이터를 갖고 있습니다.\n",
@@ -83,6 +73,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for i in output_dataset.variables.keys():\n",
+    "    print(\"\")\n",
+    "    print(output_dataset[i])\n",
+    "    print(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_dataset['latitude']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_dataset['p140121'][:].data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(output_dataset['time'].get_dims())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_dataset['p140121'].long_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "array_format = np.array(output_dataset['v100']).T.reshape([4344,2,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array_format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "info_dict, meta_dict = conversion_module.netCDF4_to_CSV(output_dataset)\n",
     "data_df = conversion_module.dict_to_dataframe(info_dict, meta_dict)\n",
     "data_df = conversion_module.measure_wind_info(data_df)\n",
@@ -96,205 +153,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>time</th>\n",
-       "      <th>u100</th>\n",
-       "      <th>v100</th>\n",
-       "      <th>100m_wind_direction</th>\n",
-       "      <th>100m_wind_speed</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>34.24</td>\n",
-       "      <td>127.09</td>\n",
-       "      <td>2018-01-01 00:00:00</td>\n",
-       "      <td>1.1992001371319785</td>\n",
-       "      <td>-3.387745165685549</td>\n",
-       "      <td>340.50696351005513 degree</td>\n",
-       "      <td>3.5937304123324503 meter / second</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>34.24</td>\n",
-       "      <td>127.09</td>\n",
-       "      <td>2018-01-01 01:00:00</td>\n",
-       "      <td>1.5731244834276006</td>\n",
-       "      <td>-3.3271057486084805</td>\n",
-       "      <td>334.69424608267923 degree</td>\n",
-       "      <td>3.6802653848306854 meter / second</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>34.24</td>\n",
-       "      <td>127.09</td>\n",
-       "      <td>2018-01-01 02:00:00</td>\n",
-       "      <td>1.1999525000017885</td>\n",
-       "      <td>-4.063085522995914</td>\n",
-       "      <td>343.5465295913808 degree</td>\n",
-       "      <td>4.23657290382681 meter / second</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>34.24</td>\n",
-       "      <td>127.09</td>\n",
-       "      <td>2018-01-01 03:00:00</td>\n",
-       "      <td>1.0532417403888177</td>\n",
-       "      <td>-4.451842333846161</td>\n",
-       "      <td>346.6893861979315 degree</td>\n",
-       "      <td>4.574736968299062 meter / second</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>34.24</td>\n",
-       "      <td>127.09</td>\n",
-       "      <td>2018-01-01 04:00:00</td>\n",
-       "      <td>1.3669770570996316</td>\n",
-       "      <td>-4.10877275504028</td>\n",
-       "      <td>341.59786209610036 degree</td>\n",
-       "      <td>4.330200899172931 meter / second</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26299</th>\n",
-       "      <td>34.24</td>\n",
-       "      <td>127.09</td>\n",
-       "      <td>2020-12-31 19:00:00</td>\n",
-       "      <td>2.157710433270052</td>\n",
-       "      <td>-5.925463236513548</td>\n",
-       "      <td>339.9913068494928 degree</td>\n",
-       "      <td>6.306094582316066 meter / second</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26300</th>\n",
-       "      <td>34.24</td>\n",
-       "      <td>127.09</td>\n",
-       "      <td>2020-12-31 20:00:00</td>\n",
-       "      <td>1.8891168887478451</td>\n",
-       "      <td>-4.996766410593515</td>\n",
-       "      <td>339.2900048859797 degree</td>\n",
-       "      <td>5.34195069065486 meter / second</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26301</th>\n",
-       "      <td>34.24</td>\n",
-       "      <td>127.09</td>\n",
-       "      <td>2020-12-31 21:00:00</td>\n",
-       "      <td>1.5309921627182348</td>\n",
-       "      <td>-3.8313266549890357</td>\n",
-       "      <td>338.2184273715124 degree</td>\n",
-       "      <td>4.125893956409221 meter / second</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26302</th>\n",
-       "      <td>34.24</td>\n",
-       "      <td>127.09</td>\n",
-       "      <td>2020-12-31 22:00:00</td>\n",
-       "      <td>1.78378608697443</td>\n",
-       "      <td>-3.0945162036553415</td>\n",
-       "      <td>330.03936529673 degree</td>\n",
-       "      <td>3.5718235313028854 meter / second</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26303</th>\n",
-       "      <td>34.24</td>\n",
-       "      <td>127.09</td>\n",
-       "      <td>2020-12-31 23:00:00</td>\n",
-       "      <td>2.2923833869660615</td>\n",
-       "      <td>-2.70243668502005</td>\n",
-       "      <td>319.69321293387475 degree</td>\n",
-       "      <td>3.543753042944746 meter / second</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>26304 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      latitude longitude                 time                u100  \\\n",
-       "0        34.24    127.09  2018-01-01 00:00:00  1.1992001371319785   \n",
-       "1        34.24    127.09  2018-01-01 01:00:00  1.5731244834276006   \n",
-       "2        34.24    127.09  2018-01-01 02:00:00  1.1999525000017885   \n",
-       "3        34.24    127.09  2018-01-01 03:00:00  1.0532417403888177   \n",
-       "4        34.24    127.09  2018-01-01 04:00:00  1.3669770570996316   \n",
-       "...        ...       ...                  ...                 ...   \n",
-       "26299    34.24    127.09  2020-12-31 19:00:00   2.157710433270052   \n",
-       "26300    34.24    127.09  2020-12-31 20:00:00  1.8891168887478451   \n",
-       "26301    34.24    127.09  2020-12-31 21:00:00  1.5309921627182348   \n",
-       "26302    34.24    127.09  2020-12-31 22:00:00    1.78378608697443   \n",
-       "26303    34.24    127.09  2020-12-31 23:00:00  2.2923833869660615   \n",
-       "\n",
-       "                      v100        100m_wind_direction  \\\n",
-       "0       -3.387745165685549  340.50696351005513 degree   \n",
-       "1      -3.3271057486084805  334.69424608267923 degree   \n",
-       "2       -4.063085522995914   343.5465295913808 degree   \n",
-       "3       -4.451842333846161   346.6893861979315 degree   \n",
-       "4        -4.10877275504028  341.59786209610036 degree   \n",
-       "...                    ...                        ...   \n",
-       "26299   -5.925463236513548   339.9913068494928 degree   \n",
-       "26300   -4.996766410593515   339.2900048859797 degree   \n",
-       "26301  -3.8313266549890357   338.2184273715124 degree   \n",
-       "26302  -3.0945162036553415     330.03936529673 degree   \n",
-       "26303    -2.70243668502005  319.69321293387475 degree   \n",
-       "\n",
-       "                         100m_wind_speed  \n",
-       "0      3.5937304123324503 meter / second  \n",
-       "1      3.6802653848306854 meter / second  \n",
-       "2        4.23657290382681 meter / second  \n",
-       "3       4.574736968299062 meter / second  \n",
-       "4       4.330200899172931 meter / second  \n",
-       "...                                  ...  \n",
-       "26299   6.306094582316066 meter / second  \n",
-       "26300    5.34195069065486 meter / second  \n",
-       "26301   4.125893956409221 meter / second  \n",
-       "26302  3.5718235313028854 meter / second  \n",
-       "26303   3.543753042944746 meter / second  \n",
-       "\n",
-       "[26304 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_df"
    ]
